--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-feat
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8.16"
+reqwest = { version = "0.11.0", features = ["json"] }
