--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ comm_methods:
   - tag: chat
     name: Chatten
     image_path: /static/chat.svg
-    start: https://digid.auth.id-contact.n
+    start: http://comm-matrix-bot:3000
     purposes: [report_move, request_permit]
 
 purpose_attributes:
