--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Marlon Baeten <marlon@tweedegolf.com>"]
 edition = "2018"
 
 [dependencies]
+id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
 rocket = { git = "https://github.com/SergioBenitez/Rocket" }
 rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
