--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde_yaml = "0.8.16"
 reqwest = { version = "0.11.0", features = ["json"] }
 log = "0.4.14"
 env_logger = "0.8.3"
+josekit = "0.7.1"
