--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8.16"
 reqwest = { version = "0.11.0", features = ["json"] }
+urlencoding = "1.1.1"
 log = "0.4.14"
 env_logger = "0.8.3"
 josekit = "0.7.1"
