--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" 
 josekit = "0.7.1"
 log = "0.4.14"
 reqwest = { version = "0.11.0", features = ["json"] }
-rocket = { git = "https://github.com/SergioBenitez/Rocket" }
-rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json"] }
+rocket = { version = "0.5.0-rc.1", features = ["json"] }
 sentry = "0.21.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
