--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,11 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Check code style
-      run: cargo fmt -- --check
+      run: cargo fmt -- --check && cargo check && cargo test
     - run: rustup component add clippy
     - uses: actions-rs/clippy-check@v1
       with:
